--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,13 @@ spring:
     hikari:
       auto-commit: false
       pool-name: Hikari
-    type: com.zaxxer.hikari.HikariDataSource
+    #type: com.zaxxer.hikari.HikariDataSource
+    name: newjava
     url: jdbc:h2:mem:newjava;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
     username: newjava
     password: ''
   flyway:
+    enabled: true
     baseline-on-migrate: true
     locations: classpath:db/h2
   h2:
@@ -27,6 +29,8 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
+      hbm2dll:
+        auto: none
     show-sql: true
 cors:
   allowed:
