--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>intermission-new-java</name>
 	<description>Project for Senacor Intermission &quot;New Java&quot;</description>
 	<properties>
-    <java.version>17</java.version>
+    <java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -96,8 +96,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>19</source>
+          <target>19</target>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -115,6 +115,7 @@
               <version>1.4.2.Final</version>
             </path>
           </annotationProcessorPaths>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
