Testconainer for PostgreSQL

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
   port: 8081
 spring:
   datasource:
-    driverClassName: org.h2.Driver
+#    driverClassName: org.h2.Driver
     hikari:
       auto-commit: false
       pool-name: Hikari
