--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
       <version>1.17.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>mockserver</artifactId>
+      <version>1.17.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-client-java</artifactId>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
